--- a/index.html
+++ b/index.html
@@ -1,23 +1,5 @@
 <!DOCTYPE html>
 <html>
-    <style>
-        .font1 {
-            font-family: Arial, Helvetica, sans-serif;
-        }
-
-        .box-design1 {
-            border-color: #495057;
-            border-style: solid;
-            border-radius: 5px;
-            padding: 5px;
-            background-color: #6C757D;
-        }
-
-        .center_font {
-            text-align: center;
-        }
-
-    </style>
     <head>
         <meta charset="UTF-8">
         <title>JL710 Home</title>
@@ -25,26 +7,29 @@
         <meta name="viewport" content="width=device-widht, initial-scale=1.0">  <!-- important for mobile devices-->
         <meta name="keywords" content="HTML, Jan, JL710, Jl710">
         <meta name="description" content="JL710's Homepage">
+        <link rel="stylesheet" href="style.css" type="text/css">
     </head>
     <body style="background-color: #ADB5BD;">
-        <div class="box-design1" style="margin-bottom: 5px;">
+        <div class="box-design1">
             <h1 style="font-family: Arial, Helvetica, sans-serif; text-align: center;">JL710</h1>
             <hr style="background-color: #495057; border: none; height: 2px"/>
         </div>
-        <div class="box-design1" style="margin-bottom: 5px;">
+        <div class="box-design1">
             <h2 class="font1">Can't Decode:</h2>
             <p class="font1">
                 <span class="font1">An simple encryption Software.</span>
-                <div class="font1">Download <a href="cant-decode/cant-decode-home.html">here</a>.</div>
+                <div class="font1">Download <a class="link1" href ="cant-decode/cant-decode-home.html">here</a>.</div>
             </p>
+            <br/><br/>
             <h2 class="font1">Auto Clicker:</h2>
             <p class="font1">
                 <span>An classic AutoClicker, include a text spammer.</span>
-                <div class="font1">Download <a href="Autoclicker/Autoclicker.html">here</a>.</div>
+                <div class="font1">Download <a class="link1" href="Autoclicker/Autoclicker.html">here</a>.</div>
             </p>
         </div>
-        <div class="box-design1">
-            <a href="index.html" class="font1">Homepage</a>
+        <div class="box-design1" style="text-align: center;">
+            <a href="index.html" class="link1" style="padding-inline: 5px;">Homepage</a>
+            <a href="feedback.html" class="link1" style="padding-inline: 5px;"> Feedback </a>
         </div>
     </body>
     <footer>
