--- a/cant-decode/cant-decode-home.html
+++ b/cant-decode/cant-decode-home.html
@@ -1,27 +1,5 @@
 <!DOCTYPE html>
 <html>
-    <style>
-        .font1 {
-            font-family: Arial, Helvetica, sans-serif;
-        }
-
-        .box-design1 {
-            border-color: #495057;
-            border-style: solid;
-            border-radius: 5px;
-            padding: 5px;
-            background-color: #6C757D;
-        }
-
-        .center_font {
-            text-align: center;
-        }
-
-        .ul1 {
-            list-style-type: "-   ";
-            font-family: Arial, Helvetica, sans-serif;
-        }
-    </style>
     <head>
         <meta charset="UTF-8">
         <title>C'ant decode Home</title>
@@ -29,28 +7,35 @@
         <meta name="viewport" content="width=device-widht, initial-scale=1.0">  <!-- important for mobile devices-->
         <meta name="keywords" content="HTML, Jan, JL710, Jl710, cant decode, Cant decode, can't decode, C'ant decode">
         <meta name="description" content="C'ant decode Homepage">
+        <link rel="stylesheet" href="../style.css" type="text/css">
     </head>
     <body style="background-color: #ADB5BD;">
-        <div class="box-design1" style="margin-bottom: 5px;">
+        <div class="box-design1">
             <h1 style="font-family: Arial, Helvetica, sans-serif; text-align: center;">Can't decode</h1>
             <hr style="background-color: #495057; border: none; height: 2px"/>
         </div>
-        <div class="box-design1" style="margin-bottom: 5px;">
+        <div class="box-design1">
             <p class="font1">
                 Can't decode is an encryption software. You can decrypt and encrypt text on high level encryption.
                 Another feature is a password manager. The future of password management.
             </p>
             <br/>
-            <h4 class="font1">Features:</h4>
+            <h3 class="font1">Features:</h3>
             <ul class="ul1">
                 <li>dencoding and encoding for text with code/codefile</li>
                 <li>passwordmanager (different devices possible)</li>
             </ul>
-            <h4 class="font1">Download:</h4>
-            <a href="../programms/cant decode.zip" class="font1">Download</a>
+            <br/><br/>
+            <h3 class="font1">Download:</h3>
+            <span class="font1"><a href="../programms/cant decode.zip" class="link1">Download</a> für Windows</span>
+            <br/><br/>
+            <h3 class="font1">Crossplatform:</h3>
+            <span class="font1">Crossplatform is possible!</span>
+            <br/><br/>
         </div>
-        <div class="box-design1">
-            <a href="../index.html" class="font1">Homepage</a>
+        <div class="box-design1" style="text-align: center;">
+            <a href="../index.html" class="link1">Homepage</a>
+            <a href="../feedback.html" class="link1" style="padding-inline: 5px;"> Feedback </a>
         </div>
     </body>
 </html>
