My next project created

--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
                 <span>An classic AutoClicker, include a text spammer.</span>
                 <div class="font1">Download <a class="link1" href="Autoclicker/Autoclicker.html">here</a>.</div>
             </p>
+            <br/><br/>
+            <h2 class="font1">Next Projects:</h2>
+            <p class="font1">My next project will be a game at the GMTK Game Jam. My part in this project will be the python code. The art stuff is not my talent.
+                The Game Jam will begin on Friday June 13th, at 7PM UK time.</p>
         </div>
         <div class="box-design1" style="text-align: center; position: relative;">
             <div class="footer_div2">
@@ -33,7 +37,6 @@
                 |  
                 <a href="feedback.html" class="link1 hover1" style="padding-inline: 5px;">Feedback</a>
             </div>
-            
         </div>
         <script src="index.js"></script>
     </body>
