--- a/index.html
+++ b/index.html
@@ -7,40 +7,48 @@
         <meta name="viewport" content="width=device-widht, initial-scale=1.0">  <!-- important for mobile devices-->
         <meta name="keywords" content="HTML, Jan, JL710, Jl710, Can't decode">
         <meta name="description" content="JL710's Homepage">
-        <link rel="stylesheet" href="style.css" type="text/css">
+        <link rel="stylesheet" href="style2.css" type="text/css">
+
+        <link rel="preconnect" href="https://fonts.gstatic.com">          <!-- font style = Staatliches -->
+        <link href="https://fonts.googleapis.com/css2?family=Staatliches&display=swap" rel="stylesheet"> 
     </head>
     <body>
-        <div class="box-design1 inbox1">
-            <h1 style="font-family: Arial, Helvetica, sans-serif; text-align: center;">JL710</h1>
-            <hr style="background-color: #495057; border: none; height: 2px"/>
-        </div>
-        <div class="box-design1 inbox1">
-            <h2 class="font1">Can't Decode:</h2>
-            <p class="font1">
-                <span class="font1">An simple encryption Software. </span>
-                <div class="font1">Download <a class="link1" href ="cant-decode/cant-decode-home.html">here</a>.</div>
-            </p>
-            <br/><br/>
-            <h2 class="font1">Auto Clicker:</h2>
-            <p class="font1">
-                <span>An classic AutoClicker, include a text spammer.</span>
-                <div class="font1">Download <a class="link1" href="Autoclicker/Autoclicker.html">here</a>.</div>
-            </p>
-            <br/><br/>
-            <h2 class="font1">Next Projects:</h2>
-            <p class="font1">My next project will be a game at the GMTK Game Jam. My part in this project will be the python code. The art stuff is not my talent.
-                The Game Jam will begin on Friday June 13th, at 7PM UK time.</p>
-        </div>
-        <div class="box-design1" style="text-align: center; position: relative;">
-            <div class="footer_div2">
-                <a href="index.html" class="link1 hover1" style="padding-inline: 5px;">Homepage</a>
-                |  
-                <a href="feedback.html" class="link1 hover1" style="padding-inline: 5px;">Feedback</a>
+        <div class="padding1" style="position: relative;">
+            <h1 class="font1">
+                <div class="font-size1">JL710</div>
+                <div class="font-size2">My Coding Adventure</div>
+            </h1>
+            <hr class="hr1"/>
+            <div class="margin3">
+                <div class="font1 font-size3">My Projects:</div>
+                <div class="project1">
+                    <div class="font1 font-size4 margin4 project2">
+                        <span class="font-size5">Can't Decode:</span>
+                        <br/>
+                        An simple encryption Software.
+                        <br/>
+                        Download <a class="link1" href="cant-decode/cant-decode-home.html">here</a>.
+                    </div>
+                    <div class="font1 font-size4 margin1 project2">
+                        <span class="font-size5">Auto Clicker:</span>
+                        <br/>
+                        An classic AutoClicker, include a text spammer.
+                        <br/>
+                        Download <a class="link1" href="Autoclicker/Autoclicker.html">here</a>.
+                    </div>
+                </div>
+            </div>
+            <h2 class="font1 font-size3">Next Projects:</h2>
+            <div class="font1 font-size4">
+                My next project will be a game at the GMTK Game Jam.
+                My part in this project will be the python code.
+                The art stuff is not my talent.
+                The Game Jam will begin on Friday June 13th, at 7PM UK time.
+            </div>
+            <br/><br/><br/><hr class="hr1"/><br/>
+            <div class="font1 font-size4" style="text-align: center;">
+                <a class="link1 margin2" href="index.html">Home</a> | <a class="link1 margin2" href="feedback.html">Feedback</a>
             </div>
         </div>
-        <script src="index.js"></script>
     </body>
-    <footer>
-
-    </footer>
 </html>
