--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
             <div class="margin3">
                 <div class="font1 font-size3">My Projects:</div>
                 <div class="project1">
-                    <div class="font1 font-size4 margin4 project2">
+                    <div class="font1 font-size4 margin4 project2 hover2">
                         <span class="font-size5">Can't Decode:</span>
                         <br/>
                         An simple encryption Software.
                         <br/>
                         Download <a class="link1" href="cant-decode/cant-decode-home.html">here</a>.
                     </div>
-                    <div class="font1 font-size4 margin1 project2">
+                    <div class="font1 font-size4 margin1 project2 hover2">
                         <span class="font-size5">Auto Clicker:</span>
                         <br/>
                         An classic AutoClicker, include a text spammer.
