--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     </head>
     <body>
         <div class="padding1" style="position: relative;">
-            <h1 class="font1">
-                <div class="font-size1">JL710</div>
-                <div class="font-size2">My Coding Adventure</div>
-            </h1>
+            <div class="font1 titel1 font-size2">
+                <div class="font-size1 padding2">JL710</div>
+                <div class="font-size2 padding2" style="position: relative; width: 100%;">My Coding Adventure</div>
+            </div>
             <hr class="hr1"/>
             <div class="margin3">
                 <h2 class="font1 font-size3">My Projects:</h2>
