--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <body>
         <div class="font1 titel1 font-size2">
             <div class="font-size1 padding2">JL710</div>
-            <div class="font-size2 padding2" style="position: relative; width: 100%; text-align: center;">My Coding Adventure</div>
+            <div class="font-size2 padding2 text-align1" style="position: relative; width: 100%;">My Coding Adventure</div>
         </div>
         <hr class="hr1"/>
         <div class="margin3">
