--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-widht, initial-scale=1.0">  <!-- important for mobile devices-->
         <meta name="keywords" content="HTML, Jan, JL710, Jl710, Can't decode">
         <meta name="description" content="JL710's Homepage">
-        <link rel="stylesheet" href="style2.css" type="text/css">
+        <link rel="stylesheet" href="style.css" type="text/css">
 
         <link rel="preconnect" href="https://fonts.gstatic.com">          <!-- font style = Staatliches -->
         <link href="https://fonts.googleapis.com/css2?family=Staatliches&display=swap" rel="stylesheet"> 
@@ -46,7 +46,7 @@
         </div>
         <br/><br/><br/><hr class="hr1"/><br/><br/>
         <div class="font1 font-size4" style="text-align: center; position: relative;">
-            <div style="position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%);">
+            <div style="position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%); width: 100%;">
                 <a class="link1 padding3 hover1" href="index.html">Home</a> | <a class="link1 padding3 hover1" href="feedback.html">Feedback</a>
             </div>
         </div>
