--- a/Autoclicker/AutoClicker-home.html
+++ b/Autoclicker/AutoClicker-home.html
@@ -33,7 +33,7 @@
         <div>
             <div class="font1 font-size3">Download:</div>
             <div class="font1 font-size4">
-                <a href="../programms/Autoclicker.zip" class="link1">Download</a> für Windows.
+                <a href="../programms/Autoclicker.zip" class="link1">Download</a> for Windows.
             </div>
         </div>
         <br/><br/><br/><hr class="hr1"/><br/><br/>
