--- a/cant-decode/cant-decode-home.html
+++ b/cant-decode/cant-decode-home.html
@@ -34,7 +34,7 @@
         <div>
             <div class="font1 font-size3">Download:</div>
             <div class="font1 font-size4">
-                <a href="../programms/cant decode.zip" class="link1">Download</a> für Windows.
+                <a href="../programms/cant decode.zip" class="link1">Download</a> for Windows.
             </div>
         </div>
         <br/><br/>
