--- a/Documentation/documentation-home.html
+++ b/Documentation/documentation-home.html
@@ -124,6 +124,8 @@ document.documentElement.scrollTop = 0; //für Chrome, Firefox, IE und Opera
                         <p>comming soon</p><br/>
                         <h3 id="nav_pygame">pygame</h3>
                         <p>comming soon</p><br/>
+                        <h3 id="nav_discordpy">discord.py</h3>
+                        <p>comming soon</p><br/>
                     </p>
                     <hr/>
                     <h2 id="nav_C#">C#</h2><br/>
