--- a/error/Download-Error.html
+++ b/error/Download-Error.html
@@ -19,9 +19,9 @@
         </div>
         <div class="box-design1" style="text-align: center; position: relative;">
             <div class="footer_div2">
-                <a href="../index.html" class="font1 hover1">Homepage</a>
+                <a href="../index.html" class="font1 link1 hover1">Homepage</a>
                 |
-                <a href="../feedback.html" class="link1 hover1" style="padding-inline: 5px;">Feedback</a>  
+                <a href="../feedback.html" class="font1 link1 hover1" style="padding-inline: 5px;">Feedback</a>  
             </div>
         </div>
     </body>
